Add WAX data support
WAX blockchain data is stored in a different database. The API will
assume one exists for EOS and one for WAX. The `{chain}` path parameter
is added to select between the two. `/head` is renamed `/chains` and
returns information on supported Antelope chains for which data is
available.
