# tsp-output/@typespec/openapi3/openapi.json
@@ -21,116 +21,14 @@
     }
   ],
   "paths": {
-    "/balance": {
+    "/chains": {
       "get": {
         "tags": [
           "Usage"
         ],
-        "operationId": "Usage_balance",
-        "summary": "Token balance",
-        "description": "Balances of an account.",
-        "parameters": [
-          {
-            "name": "block_num",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "uint64"
-            }
-          },
-          {
-            "name": "contract",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "symcode",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "account",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "uint64",
-              "default": 10
-            }
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "integer",
-              "format": "uint64",
-              "default": 1
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Array of balances.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "required": [
-                    "data",
-                    "meta"
-                  ],
-                  "properties": {
-                    "data": {
-                      "type": "array",
-                      "items": {
-                        "$ref": "#/components/schemas/BalanceChange"
-                      }
-                    },
-                    "meta": {
-                      "$ref": "#/components/schemas/ResponseMetadata"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/head": {
-      "get": {
-        "tags": [
-          "Usage"
-        ],
-        "operationId": "Usage_head",
-        "summary": "Head block information",
-        "description": "Information about the current head block in the database.",
+        "operationId": "Usage_chains",
+        "summary": "Chains and latest block available",
+        "description": "List of available Antelope chains and corresponding latest block for which data is available.",
         "parameters": [
           {
             "name": "limit",
@@ -234,7 +132,207 @@
         }
       }
     },
-    "/holders": {
+    "/metrics": {
+      "get": {
+        "tags": [
+          "Monitoring"
+        ],
+        "operationId": "Monitoring_metrics",
+        "summary": "Prometheus metrics",
+        "description": "Prometheus metrics.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Metrics as text.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/openapi": {
+      "get": {
+        "tags": [
+          "Docs"
+        ],
+        "operationId": "Docs_openapi",
+        "summary": "OpenAPI JSON spec",
+        "description": "Reflection endpoint to return OpenAPI JSON spec. Also used by Swagger to generate the frontpage.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "The OpenAPI JSON spec",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {}
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/APIError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/version": {
+      "get": {
+        "tags": [
+          "Docs"
+        ],
+        "operationId": "Docs_version",
+        "summary": "API version",
+        "description": "API version and Git short commit hash.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "The API version and commit hash.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Version"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/APIError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/{chain}/balance": {
+      "get": {
+        "tags": [
+          "Usage"
+        ],
+        "operationId": "Usage_balance",
+        "summary": "Token balance",
+        "description": "Balances of an account.",
+        "parameters": [
+          {
+            "name": "chain",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/SupportedChains"
+            }
+          },
+          {
+            "name": "block_num",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "uint64"
+            }
+          },
+          {
+            "name": "contract",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "symcode",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "account",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "uint64",
+              "default": 10
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "uint64",
+              "default": 1
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Array of balances.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "data",
+                    "meta"
+                  ],
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/BalanceChange"
+                      }
+                    },
+                    "meta": {
+                      "$ref": "#/components/schemas/ResponseMetadata"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/APIError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/{chain}/holders": {
       "get": {
         "tags": [
           "Usage"
@@ -243,6 +341,14 @@
         "summary": "Token holders",
         "description": "List of holders of a token.",
         "parameters": [
+          {
+            "name": "chain",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/SupportedChains"
+            }
+          },
           {
             "name": "contract",
             "in": "query",
@@ -319,64 +425,7 @@
         }
       }
     },
-    "/metrics": {
-      "get": {
-        "tags": [
-          "Monitoring"
-        ],
-        "operationId": "Monitoring_metrics",
-        "summary": "Prometheus metrics",
-        "description": "Prometheus metrics.",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Metrics as text.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/openapi": {
-      "get": {
-        "tags": [
-          "Docs"
-        ],
-        "operationId": "Docs_openapi",
-        "summary": "OpenAPI JSON spec",
-        "description": "Reflection endpoint to return OpenAPI JSON spec. Also used by Swagger to generate the frontpage.",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "The OpenAPI JSON spec",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "additionalProperties": {}
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/supply": {
+    "/{chain}/supply": {
       "get": {
         "tags": [
           "Usage"
@@ -385,6 +434,14 @@
         "summary": "Token supply",
         "description": "Total supply for a token.",
         "parameters": [
+          {
+            "name": "chain",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/SupportedChains"
+            }
+          },
           {
             "name": "block_num",
             "in": "query",
@@ -478,7 +535,7 @@
         }
       }
     },
-    "/tokens": {
+    "/{chain}/tokens": {
       "get": {
         "tags": [
           "Usage"
@@ -487,6 +544,14 @@
         "summary": "Tokens",
         "description": "List of available tokens.",
         "parameters": [
+          {
+            "name": "chain",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/SupportedChains"
+            }
+          },
           {
             "name": "limit",
             "in": "query",
@@ -547,7 +612,7 @@
         }
       }
     },
-    "/transfers": {
+    "/{chain}/transfers": {
       "get": {
         "tags": [
           "Usage"
@@ -556,6 +621,14 @@
         "summary": "Token transfers",
         "description": "All transfers related to a token.",
         "parameters": [
+          {
+            "name": "chain",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/SupportedChains"
+            }
+          },
           {
             "name": "block_range",
             "in": "query",
@@ -662,7 +735,7 @@
         }
       }
     },
-    "/transfers/{trx_id}": {
+    "/{chain}/transfers/{trx_id}": {
       "get": {
         "tags": [
           "Usage"
@@ -671,6 +744,14 @@
         "summary": "Token transfer",
         "description": "Specific transfer related to a token.",
         "parameters": [
+          {
+            "name": "chain",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/SupportedChains"
+            }
+          },
           {
             "name": "trx_id",
             "in": "path",
@@ -722,39 +803,6 @@
                       "$ref": "#/components/schemas/ResponseMetadata"
                     }
                   }
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/APIError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/version": {
-      "get": {
-        "tags": [
-          "Docs"
-        ],
-        "operationId": "Docs_version",
-        "summary": "API version",
-        "description": "API version and Git short commit hash.",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "The API version and commit hash.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Version"
                 }
               }
             }
@@ -1043,6 +1091,13 @@
             "format": "int64"
           }
         }
+      },
+      "SupportedChains": {
+        "type": "string",
+        "enum": [
+          "eos",
+          "wax"
+        ]
       },
       "Transfer": {
         "type": "object",
